<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--<string name="app_name">Tree Tracker</string>-->
    <string name="hello">Hello TreeTracker!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="done">Done</string>
    <string name="notes">Notes</string>
    <string name="notes_double_colon">Notes:</string>
    <string name="album_name">TreeTracker</string>
    <string name="treetracker">TreeTracker</string>
    <string name="welcome">Welcome</string>
    <string name="tree_preview">Tree Preview</string>
    <string name="log_in_in_progress">Login in progress!</string>
    <string name="sign_up_in_progress">Sign up in progress!</string>
    <string name="downloading_your_trees">Downloading your trees!\nPlease wait.</string>
    <string name="no_image_preview_available">No image preview available</string>
    <string name="sending_password_reset_request">Sending password reset request.</string>
    <string name="reset_password_link_was_sent">Reset password link was sent to your e-mail.\nIf you do not see it, please check your junk mail.</string>
    <string name="email_was_not_found">E-mail address was not found.\nPlease enter correct e-mail address.</string>
    <string name="submit">Submit</string>
    <string name="password_reset">Password reset</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="manual">Manual</string>
    <string name="more">More</string>
    <string name="add_text_note_semicolon">Your note</string>
    <string name="add_text_note">Add text note</string>
    <string name="your_note">Your note</string>
    <string name="remove_photo">Remove photo</string>
    <string name="tree_missing">Tree Missing</string>
    <string name="touch_to_sync">Touch to snyc.</string>
    <string name="wifi_connected">Wifi connected.</string>

    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="reset_gps_location">Reset GPS location</string>
    <string name="save">Save</string>
    <string name="update">Update</string>

    <string name="save_and_edit">Save and edit</string>

    <string name="do_you_want_to_sync_your_data_now">Do you want to sync your data now?</string>
    <string name="are_you_updating_this_tree">Are you updating this tree?</string>


    <string name="outdated">Outdated</string>
    <string name="reset_password">Reset password</string>

    <string name="three_digit_number">Three digit number</string>

    <string name="distance_double_colon">Distance:</string>
    <string name="settings_saved">Settings saved</string>
    <string name="image_status_double_colon">Image Status:</string>
    <string name="last_update_double_colon">Last Update:</string>
    <string name="time_to_next_update_double_colon">Time to next update:</string>
    <string name="created_double_colon">Created:</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">E-mail address</string>
    <string name="password">Password</string>
    <string name="organization">Organization</string>
    <string name="phone_number">Phone Number</string>
    <string name="privacy_policy">I have read, understand and agree to the terms of this <a href="https://www.greenstand.org/assets/GreenStand-Privacy-Policy.pdf">privacy policy</a> </string>
    <string name="sign_up">Sign Up</string>
    <string name="cause_of_death">Cause of death</string>
    <string name="you_are_about_to_mark_this_tree_as_missing">You are about to mark this tree as missing, would you like to proceed?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="do_not_have_account">Don\'t have an account?</string>

    <string name="meters">meters</string>
    <string name="days">days</string>
    <string name="day">day</string>

    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="new_tree">New Tree</string>
    <string name="update_tree">Update Tree</string>
    <string name="map">Map</string>
    <string name="data">Data</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="exit">Exit</string>
    <string name="information">Information</string>
    <string name="forgot_password">Forgot password</string>
    <string name="forgot_password_resetting">Resetting forgotten password</string>
    <string name="sync">Sync</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>

    <string name="latitude_longitude">Latitude Longitude</string>
    <string name="gps_accuracy">GPS Accuracy</string>
    <string name="gps_accuracy_double_colon">GPS Accuracy:</string>
    <string name="next_update_double_colon">Next update:</string>
    <string name="days_to_next_update_double_colon">Days to next update:</string>
    <string name="enable_location_access">Enable location access</string>
    <string name="you_must_enable_location_access_in_your_settings_in_order_to_continue">You must enable location access setting in order to continue!</string>

    <string name="user_already_exists">User already exists</string>
    <string name="user_with_that_email">User with that e-mail address already exists.\nPlease choose action below or press back to try with another e-mail address.</string>


    <string name="total_trees">Total Trees</string>
    <string name="located">Located</string>
    <string name="to_sync">To Sync</string>
    <string name="uploaded">Uploaded</string>


    <string name="location_permission_alert_title">Allow TreeTracker to access location?</string>
    <string name="location_permission_alert_message">Please open Settings and turn on location permission for TreeTracker</string>

    <string name="information_text">
•	Planter app is a tree tracking tool made to support people and organizations that plant, monitor and protect trees.\n
•	Use the New Tree feature to put tree markers on your map.\n
•	Use the Update Tree feature to locate and update your tree status.\n
•	Your app’s default setting requires ten (10) meter GPS accuracy. Changing your settings to reduced GPS accuracy may affect the Update Tree feature.\n
•	For full details of how this application can benefit your tree planting project visit  www.TreeTracker.org\n
•	This Application is in development. If you have any requests or bug reports please email to  support@treetracker.org\n
</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="external_storage">"Use External Storage to Store Images  "</string>
    <string name="external_storage_path">External Storage Path</string>
    <string name="browse">Browse</string>


</resources>