<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF"
    android:orientation="vertical"
    android:padding="0dip">

    <LinearLayout
        android:id="@+id/fragment_settings_storage_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <Switch
            android:id="@+id/fragment_settings_storage_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:text="@string/external_storage"
            android:textOff="Off"
            android:textOn="On" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_settings_storage_file_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_settings_storage_layout"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="5dp">

        <Button
            android:id="@+id/fragment_settings_storage_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/browse" />

        <TextView
            android:id="@+id/fragment_settings_storage_textview"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/external_storage_path" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_settings_separator1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/fragment_settings_storage_file_layout"
        android:orientation="horizontal"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:id="@+id/fragment_settings_which_settings_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_settings_separator1"
        android:orientation="vertical"
        android:padding="0dip">

        <RadioGroup
            android:id="@+id/fragment_settings_which_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="0dip"
            android:paddingLeft="0dip"
            android:paddingTop="6dip">

            <RadioButton
                android:id="@+id/fragment_settings_treetracker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/treetracker" />

            <RadioButton
                android:id="@+id/fragment_settings_manual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/manual" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_settings_gps_accuracy_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_settings_which_settings_layout"
        android:orientation="horizontal"
        android:paddingBottom="2dp"
        android:paddingLeft="30dp"
        android:paddingRight="32dp"
        android:paddingTop="2dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:text="@string/gps_accuracy_double_colon"
            android:textColor="#000"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/fragment_settings_gps_accuracy"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="#FF916B4A"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_settings_manual_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_settings_gps_accuracy_layout"
        android:orientation="vertical"
        android:padding="0dip"
        android:visibility="gone">

        <RadioGroup
            android:id="@+id/fragment_settings_manual_settings_radio_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="30dp">

            <RadioButton
                android:id="@+id/fragment_settings_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10" />

            <RadioButton
                android:id="@+id/fragment_settings_50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="50" />


            <RadioButton
                android:id="@+id/fragment_settings_200"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="200" />

            <RadioButton
                android:id="@+id/fragment_settings_1000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1000" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_settings_separator2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/fragment_settings_manual_settings"
        android:orientation="horizontal"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:id="@+id/fragment_settings_next_update_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_settings_separator2"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="30dp"
        android:paddingRight="32dp">

        <TextView
            android:id="@+id/fragment_settings_next_update_text"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_weight="3"
            android:text="@string/days_to_next_update_double_colon"
            android:textColor="#000"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/fragment_settings_next_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:maxLength="3"
            android:textColor="#FF916B4A"
            android:textSize="17sp" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/fragment_settings_save_and_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_settings_next_update_layout"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="0dp"
        android:text="@string/save_and_edit"
        android:textSize="17sp"
        android:visibility="gone" />


    <Button
        android:id="@+id/fragment_settings_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dip"
        android:background="@drawable/white_gray_gradient"
        android:padding="5dip"
        android:text="@string/submit"
        android:textColor="#FF916B4A"
        android:textSize="17sp"
        android:textStyle="normal" />

</RelativeLayout>

